# 30122-project-parks-pulse

./: .gitignore  README.md  location.py  national-parks  national_parks_location  national_parks_visitors2022.csv  parks-size.py  pyproject.toml
hazards/: clean.py  linkage.py  nps-nightsky-monitoring.kml:Zone.Identifier  scraper.py
hazards/cleaned_data/: dmr-2015-2019.csv  dmr-2023.csv  light-pollution.csv  np-dmr-annual.csv  np-fire.csv  np-fires-annual-acres.csv  np-fires-annual-count.csv  np-fires-annual.csv  np-light-pollution.csv  orphaned_wells.csv
hazards/data/: InFORM_Fire_Occurrence_Data_Records.csv:Zone.Identifier  dmr-2023.csv  nifc-fire.csv  np-maintenance-2015-2019.csv  npca-orphaned-wells.csv  nps-boundary.geojson:Zone.Identifier  nps-dmr-2023.csv  nps-nightsky-monitoring.geojson  nps-parkcode.csv  pew-maintenance.csv  pew-maintenance.json
ppp/: __main__.py  annual-visitation-by-park(2011-2022).csv  clean_climate.py  national_parks.csv  national_parks_size.csv  national_parks_state_location.csv  park_coordinates.py  parks_coordinates.csv  wqp_api.py
ppp/analysis/: Analysis_visitation, spending and climate.py  analysis.html  analysis_visitation,spending,climate.py  app.py  descriptive_stat.py  dmr_analysis.py  factor_analysis.py  fire_size_trend.py  visitation_and_fire_occurrence.py
ppp/cleaned_data/: basic_info_clean_and_merge.py  clean_climate.py  cleaned_nps_info.csv  cleaned_time_series.csv  cleaning_nps_spending.py  park_coordinates.py
ppp/cleaning/: basic_info_clean_and_merge.py  clean_climate.py  clean_hazards.py  clean_merge.py  (+7 more)
(+200 files in other folders)
