[tool.poetry]
name = "ppp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^5.1.0"
geopandas = "^0.14.3"
fastkml = "^0.12"
cssselect = "^1.2.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.1"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
